[gd_scene load_steps=4 format=3 uid="uid://dxsqgdawdvfeg"]

[ext_resource type="Script" path="res://GameManager/pause_menu/pause_menu.gd" id="1_hmed1"]
[ext_resource type="PackedScene" uid="uid://bdis8kcd0sfdd" path="res://StartMenu/settings.tscn" id="2_qxi2j"]
[ext_resource type="PackedScene" uid="uid://tp4ehyw7smy8" path="res://GameManager/Inventory/inventory.tscn" id="3_nd36e"]

[node name="PauseMenu" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 0
scale = Vector2(4.01479, 1.78477)
script = ExtResource("1_hmed1")

[node name="Darken" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 3372.06
offset_top = -2053.04
offset_right = 3759.06
offset_bottom = -1768.04
scale = Vector2(-15.6275, 16.0015)
mouse_filter = 1
color = Color(0, 0, 0, 0.654902)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1.52588e-05
offset_top = -3.24589
offset_right = 275.0
offset_bottom = 281.754
scale = Vector2(0.852447, 1)
mouse_filter = 1
color = Color(0.32549, 1, 1, 0.286275)

[node name="Resume" type="Button" parent="."]
layout_mode = 0
offset_left = 11.9435
offset_top = 222.345
offset_right = 83.9435
offset_bottom = 253.345
text = "RESUME"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 151.284
offset_top = 220.722
offset_right = 198.284
offset_bottom = 251.722
text = "QUIT"

[node name="InventoryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 73.6516
offset_top = 17.8526
offset_right = 186.652
offset_bottom = 48.8526
scale = Vector2(0.628924, 2.02754)
text = "Inventory"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 74.6469
offset_top = 128.214
offset_right = 187.647
offset_bottom = 159.214
scale = Vector2(0.628924, 2.02754)
text = "Settings"

[node name="Settings" parent="." instance=ExtResource("2_qxi2j")]
visible = false
layout_mode = 1
offset_top = -1.62294
offset_bottom = -1.62294
scale = Vector2(0.790479, 1)

[node name="Inventory" parent="." instance=ExtResource("3_nd36e")]
visible = false
layout_direction = 0
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -40.1017
offset_top = -156.323
offset_right = -40.1017
offset_bottom = -156.323
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.36372, 0.660203)

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
